--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -10,9 +10,12 @@ $control-border-width: 2px;
 $input-border-color: transparent;
 $input-shadow: none;   
 
-
 $firstTimeBubble: #FF00FF;
 
 $secondTimeBubble: #8A2BE2;
 
 $thirdTimeBubble: #9932CC;
+
+$crimsonRed: #DC143C;
+
+$tomatoRed: #FF6347;
