--- a/src/app/components/work-break/work-break.component.html
+++ b/src/app/components/work-break/work-break.component.html
@@ -1,5 +1,26 @@
 <div class="work-break-content">
-    <button class="break" ngbTooltip="Take a 15mins break!"> 
+    <button *ngIf="pauseStarted == false" class="break" ngbTooltip="Take a 15mins break!" (click)="startTimer()"> 
         Break! 
     </button>
+
+    <div *ngIf="pauseStarted == true" class="break-container">
+        <button *ngIf="paused == false" class="pause-button" (click)="pauseTimer()">
+            <i class="fa-solid fa-pause"></i>
+        </button>
+
+        <button *ngIf="paused == true" class="resume-button" (click)="resumeTimer()">
+            <i class="fa-solid fa-play"></i>
+        </button>
+
+        <div class="time-break">
+            {{ minutesToShow }} : {{ secondsToShow }}
+         </div>
+         <button class="exit-button" (click)="stopTimer()">
+            <i class="fa-solid fa-xmark"></i>
+         </button>
+    </div>
 </div>
+
+<audio #audioOption>
+    <source src='../../../assets/sounds/alarm-pause-end.wav' type="audio/mp3">
+</audio>
