--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -34,10 +34,13 @@
         </app-lists>
         
         <div class="task-list-container col-8">
-            <mat-tab-group *ngIf="tasks" mat-align-tabs="start">
+            <div class="form-group search-tasks">
+                <input type="text" class="form-control mb-4" placeholder="Search" [(ngModel)]="searchFilter" id="listSearch">
+            </div>
+            <mat-tab-group class="tasks-tabs" *ngIf="tasks" mat-align-tabs="start">
                 <mat-tab *ngIf="inProgressTasks.length > 0" [label]="'In Progress (' + inProgressTasks.length + ')'">
                     <div  cdkDropList class="inprogress-tasks" (cdkDropListDropped)="drop($event, inProgressTasks)">
-                        <div *ngFor="let task of inProgressTasks;let indexOfElement=index;" class="task task-color" cdkDrag>
+                        <div *ngFor="let task of (inProgressTasks | searchTaskFilter : searchFilter);let indexOfElement=index;" class="task task-color" cdkDrag>
                             <div class="example-custom-placeholder" *cdkDragPlaceholder></div>
                             <div class="checkbox-and-title">
                                 <div class="circle" (click)="completeThisTask(task, indexOfElement)">
@@ -66,7 +69,7 @@
                 
                 <mat-tab [label]="'Completed (' + completedTasks.length + ')'" *ngIf="completedTasks.length > 0">
                     <div class="completed-tasks">
-                        <div *ngFor="let task of completedTasks; let indexOfElement=index;" class="task task-color">
+                        <div *ngFor="let task of (completedTasks | searchTaskFilter : searchFilter); let indexOfElement=index;" class="task task-color">
                             <div class="checkbox-and-title">
                                 <div class="circle-completed">
                                     <div class="checkmark"></div>
