--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -19,3 +19,5 @@ $thirdTimeBubble: #9932CC;
 $crimsonRed: #DC143C;
 
 $tomatoRed: #FF6347;
+
+$topBackground: "../../../assets/images/leavesBgnd.png";
