--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -20,4 +20,6 @@ $crimsonRed: #DC143C;
 
 $tomatoRed: #FF6347;
 
+$notStartedTask: gray;
+
 $topBackground: "../../../assets/images/leavesBgnd.png";
