Finished tags functionality, now they appear in all the modals and have different colors

--- a/src/app/components/modals/modify-item/modify-item.component.html
+++ b/src/app/components/modals/modify-item/modify-item.component.html
@@ -17,6 +17,10 @@
         <textarea autosize id="observations" [value]="this.observations" [(ngModel)]="this.observations"></textarea>
     </div>
     
+    <div *ngIf="elementName == ITEM_TYPE.task" class="observations modal-text description-container">
+        <label>Tags</label>
+        <app-tags [currentTags]="this.tags" (tagsAdded)="tagsAddedHandler($event)"></app-tags>
+    </div>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-danger" (click)="closeModal()">Cancel</button>
