--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -22,4 +22,14 @@ $tomatoRed: #FF6347;
 
 $notStartedTask: gray;
 
+$frontendTag: #32CD32;
+$backendTag: #3232cd;
+$testingTag: #cd7f32;
+$bugTag: #cd3232;
+$codeRefactoryTag: #cd327f;
+$frontendBackendTag: #32cdcd;
+$gitTag: #113438;
+
+
+
 $topBackground: "../../../assets/images/leavesBgnd.png";
