Hide search bar when there is no task

--- a/src/app/components/dialogs/success-message/success-message.component.html
+++ b/src/app/components/dialogs/success-message/success-message.component.html
@@ -1,6 +1,6 @@
 <div class="success-message-container" [ngClass]="showModal != false ? 'show' : ''">
     <div class="success-message-text">
         {{successMessage}}
-        <i class="fa-solid fa-check-double success-icon"></i>
+        <i class="fa-solid fa-check success-icon"></i>
     </div>
 </div>
