--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,6 +6,8 @@ $darkSpringGreen: #2E6B48;
 $darkJungleGreen: #12261D;
 $prussianBlue: #122E42;
 
+$errorColor: #cc0000;
+
 $control-border-width: 2px;
 $input-border-color: transparent;
 $input-shadow: none;   
