--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -50,11 +50,11 @@
 }
 
 .sidebar {
-    height: 60%;
+    height: 66%;
 }
 
 .bottom-row {
-    height: 20%;
+    height: 15%;
 }
 
 .task-manager-container {
@@ -64,7 +64,7 @@
     max-height: 80%;
     height: 100%;
     background: whitesmoke;
-    padding: 20px;
+    padding: 8px 15px 8px 15px;
     border-radius: 0 30px 0 30px;
     position: relative;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
