Added animation on hovering on app's title

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -18,9 +18,10 @@
     </button>
     <div class="row title-row">
         <div class="col-4">
-            <h1 class="title has-text-primary">
-                TaskFlow <i class="fa-solid fa-tree"></i>
-            </h1>
+            <div class="title has-text-primary">
+                <h1 class="title-header"> TaskFlow </h1> 
+                <i class="fa-solid fa-tree app-logo"></i>
+            </div>
         </div>
     </div>
 
