--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -30,7 +30,6 @@
 .title .fa-tree, 
 .title .fa-pagelines {
     font-size: 28px;
-    color: $darkSpringGreen;
 }
 
 .title .fa-tree {
@@ -44,7 +43,7 @@
         border-radius: 0 100px 55px 125px;
         color: white;
         background: $listColor;
-        padding: 5px 15px 5px 15px;
+        padding: 2px 10px 2px 10px;
         width: fit-content;
     }
 }
@@ -498,4 +497,51 @@
 
 .disabled  {
     background: gray;
+}
+
+.title-row .title {
+    position: relative;
+    overflow: hidden;
+    border: 5px solid $listColor;
+}
+
+.title-row .title-header {
+    position: relative;
+    color: white;
+    overflow: hidden;
+    transition: 1s;
+    z-index: 3;
+    font-size: 35px;
+}
+
+.title-row .title .app-logo {
+    position: relative;
+    color: forestgreen;
+    transition: 1s;
+    z-index: 3;  
+}
+
+.title-row .title:before {
+    background: forestgreen;
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: 1s;
+    z-index: 1;
+}
+
+.title-row {
+    cursor: pointer;
+}
+
+.title-row .title:hover:before {
+    top: 0;
+}
+
+.title-row .title:hover .app-logo {
+    transform: rotateY(720deg);
+    color: white;
 }
