Now date is displayed in a readable format in task and list modals

--- a/src/app/components/modals/view-list/view-list.component.html
+++ b/src/app/components/modals/view-list/view-list.component.html
@@ -17,7 +17,7 @@
     Date Created
     </div>
     <p>
-      {{list.dateCreated}}
+      {{this.dateCreated}}
     </p>
   </div>
 
@@ -26,7 +26,7 @@
     Date Completed
     </div>
     <p>
-      {{list.dateCompleted}}
+      {{this.dateCompleted}}
     </p>
   </div>
 </div>
