--- a/src/app/components/modals/view-task/view-task.component.html
+++ b/src/app/components/modals/view-task/view-task.component.html
@@ -27,7 +27,7 @@
     Date Created
     </div>
     <p>
-      {{task.dateCreated}}
+      {{this.dateCreated}}
     </p>
   </div>
 
@@ -36,7 +36,7 @@
     Date Completed
     </div>
     <p>
-      {{task.dateCompleted}}
+      {{this.dateCompleted}}
     </p>
   </div>
 
