--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -130,6 +130,10 @@
     display: flex;
 }
 
+.completed-tasks  .task-title {
+    color: $darkSpringGreen;
+}
+
 .task-list-container {
 
     height: 100%;
@@ -243,7 +247,7 @@
     justify-content: center;
     align-items: center;
     padding: 5px;
-    background: $darkSpringGreen;
+    background: $listColor;
     color: whitesmoke;
 }
 
