Added password  strength check component that now  works in the register form

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -50,7 +50,7 @@
                                     <div class="checkmark"></div>
                                 </div>
 
-                                <div *ngIf="task.isStarted == false" class="circle gray-circle">
+                                <div *ngIf="task.isStarted == false" class="circle gray-circle" (click)="notStartedTask(task)">
                                     
                                 </div>
                                 
