--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -7,3 +7,11 @@
 .card-container {
     padding: 30px;
 }
+
+.login .card-container {
+    min-width: 400px;
+}
+
+.login .alert-danger {
+    margin-top: 10px;
+}
