--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="row center">
+<div class="container login">
+  <div class="row center margin-top">
     <div class="col-md-6 center">
       <div class="card card-container ">
         <img
